src/objects/Summary_Log__c.object
<CustomObject>
    <fields>
        <fullName>Failed_Record_Count__c</fullName>
        <label>Failed Record Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inserted_Record_Count__c</fullName>
        <label>Inserted Record Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_Job_Id__c</fullName>
        <label>MS Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Complete__c</fullName>
        <formula>IF(Total_Records__c != 0, (Failed_Record_Count__c +  Inserted_Record_Count__c +  Updated_Record_Count__c) /  Total_Records__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Progress_Indicator__c</fullName>
        <formula>(CASE(
        FLOOR(Percentage_Complete__c * 10),
        0, &apos;░░░░░░░░░░ &apos;,
        1, &apos;█░░░░░░░░░ &apos;,
        2, &apos;██░░░░░░░░ &apos;,
        3, &apos;███░░░░░░░ &apos;,
        4, &apos;████░░░░░░ &apos;,
        5, &apos;█████░░░░░ &apos;,
        6, &apos;██████░░░░ &apos;,
        7, &apos;███████░░░ &apos;,
        8, &apos;████████░░ &apos;,
        9, &apos;█████████░ &apos;,
        10, &apos;██████████ &apos;,
        &apos;No Progress&apos;
    )) + TEXT(Percentage_Complete__c * 100) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>APF</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated_Record_Count__c</fullName>
        <label>Updated Record Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Master</label>
        <referenceTo>Vendor_Master__c</referenceTo>
        <relationshipLabel>Summary Logs</relationshipLabel>
        <relationshipName>Summary_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webhook_Response__c</fullName>
        <label>Webhook Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Summary Log</label>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Summary Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summary Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>